Fixed two column issue on mobile devices and bottom padding on landing page boxes

--- a/styles/index.sass
+++ b/styles/index.sass
@@ -18,6 +18,7 @@ body
 a
     text-decoration: none
 
+
 .container
     display: inline-block
     position: relative
@@ -49,7 +50,7 @@ a
         color: white
         align: center
         vertical-align: bottom
-        padding-bottom: 38vh
+        padding-bottom: 25vh
 
 .right-box
     left: -0.5vw
